# anime-radio-grpc

./: .gitignore  Makefile  README.md
api/proto/: anime_radio.proto
client/: Dockerfile  go.mod  go.sum  main.go
client/api/: youtube.go
client/variable/: youtube.go
server/: Dockerfile  demo.py  main.py  pyproject.toml  server.py
server/api/: slack.py
